# TengriNews-Clone

./: .env.example  .gitignore  docker-compose.yml  task.md
backend/: db.sqlite3  manage.py  pyproject.toml
backend/apps/abstract/: decorators.py  mixins.py
backend/apps/accounts/: admin.py  apps.py  manager.py  models.py  serializers.py  views.py
backend/apps/accounts/auth/: serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/main/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/settings/: asgi.py  base.py  conf.py  urls.py  wsgi.py
backend/settings/env/: local.py  prod.py
dockerfiles/: backend.Dockerfile
