[project]
name = "tengrinews-clone"
version = "0.0.1"
description = "TengriNews Clone"
authors = [{ name = "Turarbek Sataldiyev", email = "turarbeks@bk.ru" }]
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.1",
    "django==5.0",
    "django-cors-headers>=4.9.0",
    "django-unfold>=0.80.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "whitenoise>=6.11.0",
]
